--- a/src/styles/cart/cart.css
+++ b/src/styles/cart/cart.css
@@ -169,6 +169,11 @@ textarea {
   width: 100%;
   resize: none;
 }
+.del-btn {
+  width: 75px;
+  height: 40px;
+}
+
 .reverse {
   transform: rotate(180deg);
 }
